tests/resources/errors/errors_destructors5.ac
import std;
import std.Error;

struct TestError :: *Error {
    const fn get_name() -> const char* {
        return "TestError";
    }
    const fn get_message() -> const char* {
        return "error raised!";
    }
}

fn write_val(val: int8) {

#if OS_GROUP_WINDOWS
    handle: void* = std.GetStdHandle(-11);
    written: uint32;
    c: char = as(char) val;
    std.WriteFile(handle, &c, 1, &written, null);
#elif OS_GROUP_UNIX
    c: char = as(char) val;
    std.write(1, &c, 1);
#endif

}

struct A {
    v: int8;
    fn delete() {
        std.print("deconstructor called!");
    }
}

fn foo(b: bool) -> A | raises TestError {
    if b {
        raise TestError{};
    } else {
        return A{ 64 };
    }
}

fn bar(b: bool) | raises TestError {
    a: A = try foo(b) {
        std.print("caught error!");
        raise TestError{};
    };
    write_val(a.v);
}

fn main() {
    try bar(false);
    std.print("...");
    try bar(true);
}